welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:12: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( b < 10 && a > 20){
        ^